force-app/main/default/objects/purecloud__PureCloud_Campaign_Schedule__c/purecloud__PureCloud_Campaign_Schedule__c.object-meta.xml
<CustomObject>
    <label>Genesys Cloud Campaign Schedule</label>
    <nameField>
        <label>Genesys Cloud Campaign Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genesys Cloud Campaign Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>