force-app/main/default/objects/purecloud__PureCloud_Campaign_Schedule__c/fields/purecloud__Days_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Days_of_the_Week__c</fullName>
    <label>Days of the Week</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>