force-app/main/default/objects/purecloud__PureCloud_Campaign_Schedule__c/fields/purecloud__End_Time__c.field-meta.xml
<CustomField>
    <fullName>purecloud__End_Time__c</fullName>
    <label>End Time</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>